projects/elements/src/accordion/accordion-header.css
:host {
  width: 100%;
  --cursor: pointer;
}

[internal-host] {
  cursor: var(--cursor);
  color: var(--color);
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;

  ::slotted([slot='title']) {
    margin: 0;
    font-size: var(--nve-ref-font-size-200);
    font-weight: var(--nve-ref-font-weight-medium);
  }

  ::slotted([slot='subtitle']) {
    margin: 0;
    font-size: var(--nve-ref-font-size-100);
    font-weight: var(--nve-ref-font-weight-regular);
    color: var(--nve-sys-text-muted-color);
  }

  #titles {
    display: flex;
    flex-direction: column;
    gap: var(--nve-ref-space-xxxs);
  }

  #actions {
    display: flex;
    flex-direction: row;
    gap: var(--nve-ref-space-xs);
  }
}

